'search-table-sm-models'

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -14,6 +14,11 @@
         
         {% endblock title %} | t101 clients
     </title>
+    
+    {% block stylesheet %}
+      
+    {% endblock stylesheet %}
+      
   </head>
   <body>
     
