--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,16 +6,18 @@
 {% endblock title %}
 
 {% block content %}
-        <div class="col-3 mx-auto">
+    <div class="row justify-content-center">
+        <div class="col-3 card mt-4" >
             <div class="mt-4">
                 <div><h3>TJ-101 System Login</h3></div>
                 <hr>
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form | crispy}}
-                    <button class="btn btn-primary" type="submit">Login</button>
-                </form>
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form | crispy}}
+                        <button class="btn btn-primary mb-4" type="submit">Login</button>
+                    </form>
                 </div>
         </div>
+    </div>
 {% endblock content %}
     
