added bills to collection

--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -27,7 +27,7 @@
             </div>
             
             <div class="table-responsive">
-                <table class="table table-hover table-sm" id="clientList">   
+                <table class="table table-hover table-sm table-striped" id="clientList">   
                     <thead class="thead-light">
                         <tr>
                             <th>#</th>
