--- a/templates/status/statuses.html
+++ b/templates/status/statuses.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="table-responsive">
-                    <table class="table table-hover table-sm" id="statusTable">
+                    <table class="table table-hover table-sm table-striped" id="statusTable">
                         <thead class="thead-light">
                             <tr>
                                 <th>#</th>
