--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -8,8 +8,9 @@
         <a class="nav-item nav-link active" href="{% url 'client:clients' %}">Clients <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="{% url 'client:monitor_client' %}">Monitor</a>
         <a class="nav-item nav-link" href="{% url 'client:statuses' %}">Status</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        {% include 'base/navbar-accounting.html' %}
       </div>
     </div>
+    
     {% include 'base/navbar-user.html' %}
 </nav>
