--- a/templates/monitors/monitors.html
+++ b/templates/monitors/monitors.html
@@ -21,7 +21,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="table-responsive table-sm">
+                <div class="table-responsive table-sm table-striped">
                     <table class="table table-hover" id="monitorTable">
                         <thead class="thead-light">
                             <tr>
