--- a/templates/base/navbar-accounting.html
+++ b/templates/base/navbar-accounting.html
@@ -3,7 +3,7 @@
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i>Accounting</a>
         <div class="dropdown-menu" aria-labelledby="userDropdown">
-            <a class="dropdown-item" href="#">Billing</a>
+            <a class="dropdown-item" href="{% url 'collection:bills'  %}">Billing</a>
             <a class="dropdown-item" href="#">Collection</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Report</a>
