--- a/templates/status/partial_status_create.html
+++ b/templates/status/partial_status_create.html
@@ -1,9 +1,9 @@
 {% load crispy_forms_tags %}
 
-<form method="post" action="{% url 'client:create_status' client %}" class="js-create-status-form">
+<form method="post" class="js-create-status-form" action="{% url 'client:create_status' form.initial.client.pk %}">
     {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title">New status for {{client}}</h5>
+          <h5 class="modal-title">New status for {{form.initial.client}}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
