--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,13 @@
 body{
     background-color: #f4f4f4;
 }
+
+#id_client {
+    width: 200px;
+    height: 30px;
+}
+
+#id_status_type {
+    width: 150px;
+    height: 30px;
+}
