--- a/templates/bills/bills.html
+++ b/templates/bills/bills.html
@@ -1,15 +1,56 @@
 {% extends 'base/base.html' %}
+{% load static %}
 
 {% block title %}
     Billing 
 {% endblock title %}
 
+{% block stylesheet %}
+    
+{% endblock stylesheet %}
+
+
 {% block content %}
     {% include 'base/navbar.html' %}
     <div class="container mt-4">
         <div class="row">
-            <h3>Bills Here!</h3>
+            <div class='col-6 float-left'></div> 
+            <div class='col-10 float-right'>
+                <button class='btn btn-sm btn-primary mx-2 float-right'>Print</button>
+                <button class='btn btn-sm btn-primary float-right js-create-bills' 
+                    data-url="{% url 'collection:create_bill' %}">New Bill</button>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="">
+                <div class="table-responsive">
+                <table class="display" id="tbl_bills" width="100%" cellspacing="0">   
+                    <thead class="thead-light">
+                        <tr>
+                            <th>#</th>
+                            <th>Client</th>
+                            <th>Date</th>
+                            <th>From (Period)</th>
+                            <th>To (Period)</th>
+                            <th>Amount</th>
+                            <th>Cancelled</th>
+                            <th>...</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% include 'bills/bills_list.html' %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal fade" id="div_bills">
+                <div class="modal-dialog">
+                    <div class="modal-content"></div>
+                </div>
+            </div>
+            </div>
         </div>
     </div>  
 {% endblock content %}
-     
+{% block javascript %}
+
+{% endblock javascript %}
