--- a/templates/bills/bills_list.html
+++ b/templates/bills/bills_list.html
@@ -12,7 +12,7 @@
                 Update
             </button>
             <button type="button"
-                class="btn btn-outline-danger btn-sm js-delete-client"
+                class="btn btn-outline-danger btn-sm js-delete-bill"
                 data-url="{% url 'collection:delete_bill' bill.pk %}">
                 <span class="glyphicon glyphicon-trash"></span> Delete
             </button>
