--- a/templates/includes/partial_client_create.html
+++ b/templates/includes/partial_client_create.html
@@ -9,7 +9,39 @@
           </button>
         </div>
         <div class="modal-body">
-            {{form | crispy}}
+            <div class="form-row">
+              <div class="col-md-6 mb-0">
+                {{form.client_no | as_crispy_field}}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-12 mb-0">
+                {{form.client_name | as_crispy_field}}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-12 mb-0">
+                {{form.client_address | as_crispy_field}}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-12 mb-0">
+                {{form.client_email | as_crispy_field}}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6 mb-0">
+                {{form.client_registered | as_crispy_field}}
+              </div>
+              <div class="form-group col-md-6 mb-0">
+                {{form.client_ip | as_crispy_field}}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-md-6 mb-0">
+                {{form.client_active | as_crispy_field}}
+              </div>
+            </div> 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
