--- a/templates/base/navbar-accounting.html
+++ b/templates/base/navbar-accounting.html
@@ -4,7 +4,7 @@
         <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i>Accounting</a>
         <div class="dropdown-menu" aria-labelledby="userDropdown">
             <a class="dropdown-item" href="{% url 'collection:bills'  %}">Billing</a>
-            <a class="dropdown-item" href="#">Collection</a>
+            <a class="dropdown-item" href="{% url 'collection:collections' %}">Collection</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Report</a>
         </div>
