--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -8,7 +8,7 @@
         <a class="nav-item nav-link active" href="{% url 'client:clients' %}">Clients <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="{% url 'client:monitor_client' %}">Monitor</a>
         <a class="nav-item nav-link" href="{% url 'client:statuses' %}">Status</a>
-        {% include 'base/navbar-accounting.html' %}
+        {% comment %} {% include 'base/navbar-accounting.html' %} {% endcomment %}
       </div>
     </div>
     
