--- a/templates/collection/expenses.html
+++ b/templates/collection/expenses.html
@@ -51,7 +51,7 @@
             <h3 class="mt-2">TJ-101 System</h3>
             <hr>
             <div class="mt-4">
-                <h5>You are not logged in</h5>
+                <h5>You are not logged in. Please login again.</h5>
                 <a class="btn btn-primary btn-sm mb-4" href="{% url 'login' %}">login now.</a>
             </div>
         </div>
