--- a/templates/includes/partial_client_create.html
+++ b/templates/includes/partial_client_create.html
@@ -38,6 +38,11 @@
               </div>
             </div>
             <div class="form-row">
+              <div class="col-md-12 mb-0">
+                {{form.client_contact | as_crispy_field}}
+              </div>
+            </div> 
+            <div class="form-row">
               <div class="col-md-6 mb-0">
                 {{form.client_active | as_crispy_field}}
               </div>
