updated-billing-21Jun2020

--- a/templates/bills/bills.html
+++ b/templates/bills/bills.html
@@ -52,5 +52,15 @@
     </div>  
 {% endblock content %}
 {% block javascript %}
+    <script>
+        $('#div_bills').on('shown.bs.modal', function () {
+            $('#id_client').focus();
+            $(".modal-title").text("New bill for " + $("#id_client option:selected").text())
 
+            $("#id_client").change(function(){
+                var client = $("#id_client option:selected").text();
+                $(".modal-title").text("New bill for " + client);
+            })
+        })
+    </script>
 {% endblock javascript %}
