--- a/templates/bills/create_bill.html
+++ b/templates/bills/create_bill.html
@@ -3,7 +3,7 @@
 <form method='post' action="{% url 'collection:create_bill' %}" class="js-create-bill-form">
     {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title">New Client</h5>
+          <h5 class="modal-title">New bill for ---</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary btn-sm">Save changes</button>
         </div>
 </form>
