--- a/templates/includes/partial_client_update.html
+++ b/templates/includes/partial_client_update.html
@@ -43,13 +43,18 @@
               </div>
             </div> 
             <div class="form-row">
+              <div class="col-md-12 mb-0">
+                {{form.client_contact_person | as_crispy_field}}
+              </div>
+            </div> 
+            <div class="form-row">
               <div class="col-md-6 mb-0">
                 {{form.client_active | as_crispy_field}}
               </div>
             </div> 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary btn-sm">Save changes</button>
         </div>
 </form>
