--- a/templates/bills/bills_list.html
+++ b/templates/bills/bills_list.html
@@ -18,7 +18,7 @@
             </button>
             <button type="button"
                 class="btn btn-outline-success btn-sm js-payment-bill"
-                data-url="{% url 'collection:delete_bill' bill.pk %}">
+                data-url="{% url 'collection:payment_bill' bill.pk %}">
                 <span class="glyphicon glyphicon-trash"></span> Payment
             </button>
         </td>
