--- a/templates/bills/bills.html
+++ b/templates/bills/bills.html
@@ -53,19 +53,18 @@
 {% endblock content %}
 {% block javascript %}
     <script>
-        {% comment %} $('#div_bills').on('shown.bs.modal', function () {
-            if ($(".js-payment-bill")){
-                $(".modal-title").text("Payemnt for " + $("#id_client option:selected").text())
-            }
-            esle{
+        $('#div_bills').on('shown.bs.modal', function () {
+            if ($('.js-payment-bill'))
+                $('#id_receipt_no').focus();
+            else{
+                
                 $('#id_client').focus();
                 $(".modal-title").text("New bill for " + $("#id_client option:selected").text())
             }
-
             $("#id_client").change(function(){
                 var client = $("#id_client option:selected").text();
                 $(".modal-title").text("New bill for " + client);
             })
-        }) {% endcomment %}
+        })
     </script>
 {% endblock javascript %}
