--- a/templates/bills/create_bill.html
+++ b/templates/bills/create_bill.html
@@ -3,7 +3,7 @@
 <form method='post' action="{% url 'collection:create_bill' %}" class="js-create-bill-form">
     {% csrf_token %}
         <div class="modal-header">
-          <h5 class="modal-title">New bill for ---</h5>
+          <h5 class="modal-title m-title">New bill for ---</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
