--- a/templates/collection/collections.html
+++ b/templates/collection/collections.html
@@ -10,7 +10,7 @@
             <div class='col-6 float-left'></div> 
             <div class='col-12 float-right'>
                 <button class='btn btn-sm btn-primary mx-1 float-right'>Print</button>
-                <a href="{% url 'collection:payments' %}" class="btn btn-primary btn-sm mx-1 float-right">Payment</a>
+                <!-- <a href="{% url 'collection:payments' %}" class="btn btn-primary btn-sm mx-1 float-right">Payment</a> -->
             </div>
         </div>
         <div class="row mt-4">
